@@ -19,13 +19,12 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.jgit.lib.StoredConfig;
 import org.eclipse.jgit.util.SystemReader;
-import org.junit.jupiter.api.extension.AfterAllCallback;
-import org.junit.jupiter.api.extension.BeforeAllCallback;
+import org.junit.jupiter.api.extension.AfterEachCallback;
+import org.junit.jupiter.api.extension.BeforeEachCallback;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.junit.jupiter.api.parallel.ResourceAccessMode;
@@ -37,25 +36,25 @@ import org.junit.jupiter.api.parallel.ResourceLock;
 @ResourceLock(value = "GIT", mode = ResourceAccessMode.READ_WRITE)
 public @interface ClearGitConfig {
 
-	class GitConfigExtension implements BeforeAllCallback, AfterAllCallback {
+	class GitConfigExtension implements BeforeEachCallback, AfterEachCallback {
 
 		@Override
-		public void beforeAll(ExtensionContext extensionContext) throws Exception {
+		public void beforeEach(ExtensionContext extensionContext) throws Exception {
 			for (var config : getConfigs()) {
 				config.clear();
 			}
 		}
 
 		@Override
-		public void afterAll(ExtensionContext extensionContext) throws Exception {
+		public void afterEach(ExtensionContext extensionContext) throws Exception {
 			for (var config : getConfigs()) {
 				config.load();
 			}
 		}
 
-		private List<StoredConfig> getConfigs() throws Exception {
+		private static List<StoredConfig> getConfigs() throws Exception {
 			var reader = SystemReader.getInstance();
-			return Arrays.asList(reader.getUserConfig(), reader.getSystemConfig());
+			return List.of(reader.getUserConfig(), reader.getSystemConfig());
 		}
 	}
 }
